force-app/main/default/objects/Desk_Question__c/Desk_Question__c.object-meta.xml
<CustomObject>
    <description>One parent question at the desk, phone or DM. Baseline tally for the check-and-resolved metric.</description>
    <label>Desk Question</label>
    <nameField>
        <displayFormat>DQ-{000000}</displayFormat>
        <label>Desk Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>