force-app/main/default/objects/Desk_Question__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Household the question was about.</description>
    <label>Household</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Desk Questions</relationshipLabel>
    <relationshipName>Desk_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>