force-app/main/default/objects/Desk_Question__c/fields/AI_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>AI_Call_Log__c</fullName>
    <description>AI call that produced the answer.</description>
    <label>AI Call Log</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>AI_Call_Log__c</referenceTo>
    <relationshipLabel>Desk Questions</relationshipLabel>
    <relationshipName>Desk_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>