force-app/main/default/objects/Desk_Question__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>AI answer as shown to staff.</description>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>