force-app/main/default/objects/Desk_Question__c/fields/Answer_Status__c.field-meta.xml
<CustomField>
    <fullName>Answer_Status__c</fullName>
    <description>Answered with sources, not answerable from records, or blocked by guardrails.</description>
    <label>Answer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Answered</fullName><default>false</default><label>Answered</label></value>
            <value><fullName>Not in records</fullName><default>false</default><label>Not in records</label></value>
            <value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>