force-app/main/default/objects/Desk_Question__c/fields/Answered_By_Agent__c.field-meta.xml
<CustomField>
    <fullName>Answered_By_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Desk Agent supplied the answer staff used.</description>
    <label>Answered By Agent</label>
    <type>Checkbox</type>
</CustomField>