force-app/main/default/objects/Desk_Question__c/fields/Asked_At__c.field-meta.xml
<CustomField>
    <fullName>Asked_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When the parent asked. Defaults to now; backdate if logged after a rush.</description>
    <label>Asked At</label>
    <type>DateTime</type>
</CustomField>