force-app/main/default/objects/Desk_Question__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <description>Booking the answer relied on, if any.</description>
    <label>Booking</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Desk Questions</relationshipLabel>
    <relationshipName>Desk_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>