force-app/main/default/objects/Desk_Question__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Guardian who asked, if known.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Desk Questions</relationshipLabel>
    <relationshipName>Desk_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>