force-app/main/default/objects/Desk_Question__c/fields/Escalated_Count__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Count__c</fullName>
    <description>1 when escalated. Used by the weekly report.</description>
    <formula>IF(Escalated_To_Owner__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>