force-app/main/default/objects/Desk_Question__c/fields/Escalated_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Staff had to text/call the owner or promise a follow-up.</description>
    <label>Escalated To Owner</label>
    <type>Checkbox</type>
</CustomField>