force-app/main/default/objects/Desk_Question__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommunityOS_Offering</valueSetName>
    </valueSet>
</CustomField>