force-app/main/default/objects/Desk_Question__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order the answer relied on, if any.</description>
    <label>Order</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Desk Questions</relationshipLabel>
    <relationshipName>Desk_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>