force-app/main/default/objects/Desk_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The question in the parent's words.</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>