force-app/main/default/objects/Desk_Question__c/fields/Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Question_Key__c</fullName>
    <description>Developer name of the checklist question.</description>
    <label>Question Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>