force-app/main/default/objects/Desk_Question__c/fields/Resolved_Count__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Count__c</fullName>
    <description>1 when resolved on the spot. Used by the weekly report.</description>
    <formula>IF(Resolved_On_Spot__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolved Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>