force-app/main/default/objects/Desk_Question__c/fields/Resolved_On_Spot__c.field-meta.xml
<CustomField>
    <fullName>Resolved_On_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Parent left with the right answer without staff checking with the owner.</description>
    <label>Resolved On Spot</label>
    <type>Checkbox</type>
</CustomField>