force-app/main/default/objects/Desk_Question__c/fields/Source_Records__c.field-meta.xml
<CustomField>
    <fullName>Source_Records__c</fullName>
    <description>Record tokens the AI cited, e.g. Booking 1, Order 2.</description>
    <label>Source Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>